kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/valid/029_testGenericTypeAsParameter2.kmt
/* $Id: 029_testGenericTypeAsParameter2.kmt,v 1.2 2008-11-26 10:00:46 cfaucher Exp $ 
 * Creation : November 26, 2008
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            cfaucher
 */s


package testGenericTypeAsParameter2;


require kermeta

using kermeta::standard


class GenericClass<C: String> {

    operation testOperation1(o: C) is do end

    operation testOperation2(o: GenericClass<C>) is do end

}